# McCad-in-FreeCAD

McCad/: CMakeLists.txt
McCad/App/: AppMcCad.cpp  CMakeLists.txt  PreCompiled.h
McCad/Gui/: AppMcCadGui.cpp  CMakeLists.txt  Command.cpp  MaterialWindow.cpp  MaterialWindow.hpp  MaterialWindow.ui  McCadUtils.cpp  McCadUtils.h  Workbench.cpp  Workbench.h
McCad/Gui/Resources/: McCad.qrc
McCad/Gui/Resources/icons/KIT-Logo_deutsch/: KITlogo_1c_deutsch.eps  KITlogo_4c_deutsch.eps
